--- a/1406/04_clone_wars/clone_wars_submissions.yml
+++ b/1406/04_clone_wars/clone_wars_submissions.yml
@@ -7,21 +7,21 @@ submissions:
     instructor_evaluation:
       notes: ""
       rubric:
-        Functional Expectations: 2.5
-        Test-Driven Development: 1.5
-        Encapsulation / Components: 2
-        Fundamental Ruby & Style: 2
-        Sinatra / Web and Business Logic: 3
-        View Layer: 4
-    peer_evaluation:
-      notes: ""
-      rubric:
         Functional Expectations: 0
         Test-Driven Development: 0
         Encapsulation / Components: 0
         Fundamental Ruby & Style: 0
         Sinatra / Web and Business Logic: 0
         View Layer: 0
+    peer_evaluation:
+      notes: "Very nice working site and ordering system with extensive menu database. Site had routing issues, could use breaking out methods from the database, they are using SQL instead of Sequel, file structure needs organizing."
+      rubric:
+        Functional Expectations: 3
+        Test-Driven Development: 1.5
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 2.5
+        Sinatra / Web and Business Logic: 3
+        View Layer: 3
   Corey Davis, Marc Garreau, Robert Gu:
     repository: git@github.com:MarcGarreau/clonewars_uncubed.git
     setup_notes: "run bundle install to pull dependencies, then run bundle exec to rack up"
