--- a/1407/01_mastermind/mastermind_submissions.yml
+++ b/1407/01_mastermind/mastermind_submissions.yml
@@ -73,6 +73,7 @@ submissions:
       Breaking Logic into Components: 4
   Ian Anderson:
     repository: git@github.com:ianderse/battleship.git
+                git@github.com:ianderse/mastermind.git
     notes: "Did two projects. Mastermind and Battleship. Both are working and are complete. Good level of effort."
     evaluation:
       Fundamental Ruby & Style: 2
