--- a/1409/02_event_reporter/event_reporter_submissions.yml
+++ b/1409/02_event_reporter/event_reporter_submissions.yml
@@ -54,7 +54,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Timothy Mee & Adam Smith:
-    repository:
+    repository: https://github.com/AdamSmith910/practice_event_reporter.git
     evaluation:
       notes: ""
       Functional Expectations: 0
