--- a/1409/02_event_reporter/event_reporter_submissions.yml
+++ b/1409/02_event_reporter/event_reporter_submissions.yml
@@ -90,7 +90,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Danny Glunz & Chandra Carney & Sam Kuhlmann:
-    repository:
+    repository: https://github.com/dglunz/event-reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
