--- a/1409/02_event_reporter/event_reporter_submissions.yml
+++ b/1409/02_event_reporter/event_reporter_submissions.yml
@@ -1,5 +1,5 @@
 submissions:
-  Travis Yoder & Kalah Cheek:
+  Travis Yoder & Kalah Cheek:https://github.com/trayo/event_reporter.git
     repository:
     evaluation:
       notes: ""
