--- a/1409/02_event_reporter/event_reporter_submissions.yml
+++ b/1409/02_event_reporter/event_reporter_submissions.yml
@@ -18,7 +18,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Gregory Narajka & Herbert Joseph:
-    repository:
+    repository:https://github.com/gregnar/event_reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
