Added Kate and David

--- a/1409/02_event_reporter/event_reporter_submissions.yml
+++ b/1409/02_event_reporter/event_reporter_submissions.yml
@@ -107,7 +107,7 @@ submissions:
       Breaking Logic into Components: 0
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
-  Kate Lane & David Bayendor:
+  Kate Lane & David Bayendor: https://github.com/bayendor/eventreporter.git
     repository:
     evaluation:
       notes: ""
