added konr&viki repo

--- a/1409/02_event_reporter/event_reporter_submissions.yml
+++ b/1409/02_event_reporter/event_reporter_submissions.yml
@@ -71,8 +71,8 @@ submissions:
       Breaking Logic into Components: 0
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
-  Konr Josef Laron & Victoria Harrod:
-    repository:
+  Konr Josef Larson & Victoria Harrod:
+    repository:https://github.com/larsonkonr/Event-Reporter.git
     evaluation:
       notes: ""
       Functional Expectations: 0
