--- a/1409/03_sales_engine/sales_engine_submissions.yml
+++ b/1409/03_sales_engine/sales_engine_submissions.yml
@@ -1,4 +1,4 @@
-Names:
+Chandra Carney & Gregory Narajka:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -11,7 +11,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+Sam Kuhlmann & Zachary Routhier:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -24,7 +24,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+Travis Yoder & David Bayendor:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -37,7 +37,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+Adam Smith & Alex Jensen & Herbert Joseph:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -50,7 +50,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+Chase van Hekken & Christopher Bynum:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -63,7 +63,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+Danny Glunz & Victoria Harrod:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -76,7 +76,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+ Kalah Cheek & Konr Josef Larson:
     repository: 
     setup_notes: ""
     instructor_evaluation:
@@ -89,7 +89,7 @@ Names:
         Enumerable & Collections:
         Code Sanitation:
 
-Names:
+Kate Lane & Timothy Mee:
     repository: 
     setup_notes: ""
     instructor_evaluation:
