--- a/1409/03_sales_engine/sales_engine_submissions.yml
+++ b/1409/03_sales_engine/sales_engine_submissions.yml
@@ -12,7 +12,7 @@ Chandra Carney & Gregory Narajka:
         Code Sanitation:
 
 Sam Kuhlmann & Zachary Routhier:
-    repository: 
+    repository: https://github.com/skuhlmann/sales_engine
     setup_notes: ""
     instructor_evaluation:
       notes: ""
