--- a/1409/03_sales_engine/sales_engine_submissions.yml
+++ b/1409/03_sales_engine/sales_engine_submissions.yml
@@ -19,14 +19,18 @@ Sam Kuhlmann & Zachary Routhier:
     repository: https://github.com/skuhlmann/sales_engine
     setup_notes: ""
     instructor_evaluation:
-      notes: ""
+      notes: "Application fulfills all base expectations as tested by the spec harness.
+             Application is well tested but does not balance isolation and integration tests, using only the data necessary to test the functionality.
+             Application effectively breaks logical components apart but breaks the principle of SRP.
+             Application shows strong effort towards organization, content, and refactoring.
+             Application consistently makes use of the best-choice Enumerable methods."
       rubric:
-        Functional Expectations: 
-        Test-Driven Development: 
-        Encapsulation / Components:
-        Fundamental Ruby & Style: 
-        Enumerable & Collections:
-        Code Sanitation:
+        Functional Expectations: 3
+        Test-Driven Development: 3.5
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3.5
+        Enumerable & Collections: 4
+        Code Sanitation: 3
 
 Travis Yoder & David Bayendor:
     repository: 
