--- a/1409/03_sales_engine/sales_engine_submissions.yml
+++ b/1409/03_sales_engine/sales_engine_submissions.yml
@@ -85,7 +85,7 @@ Danny Glunz & Victoria Harrod:
         Code Sanitation:
 
  Kalah Cheek & Konr Josef Larson:
-    repository: 
+    repository: https://github.com/larsonkonr/sales_engine.git
     setup_notes: ""
     instructor_evaluation:
       notes: ""
