--- a/1409/03_sales_engine/sales_engine_submissions.yml
+++ b/1409/03_sales_engine/sales_engine_submissions.yml
@@ -98,7 +98,7 @@ Danny Glunz & Victoria Harrod:
         Code Sanitation:
 
 Kate Lane & Timothy Mee:
-    repository: 
+    repository:  git@github.com:Tmee/sales_engine_project.git
     setup_notes: ""
     instructor_evaluation:
       notes: ""
