--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -72,7 +72,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Michael Dao:
-    repository: 
+    repository: https://github.com/mikedao/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
