--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -135,7 +135,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Kit Pearson:
-    repository: 
+    repository: https://github.com/kpearson/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
