--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -126,7 +126,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Scott Crawford:
-    repository: 
+    repository: https://github.com/scottcrawford03/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
