--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -45,7 +45,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Nathan Owsiany:
-    repository: 
+    repository: https://github.com/ndwhtlssthr/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
