--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -27,7 +27,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Bryce Holcomb:
-    repository: 
+    repository: https://github.com/bryceholcomb/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
