--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -81,7 +81,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Kalah Cheek:
-    repository: 
+    repository:https://github.com/kcheek/mastermind2.git 
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
