--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -1,6 +1,6 @@
 submissions:
   Rich Shea:
-    repository: 
+    repository: https://github.com/rshea303/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
