--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -17,9 +17,9 @@ submissions:
       Test-Driven Development: 0
       REPL Interface: 0
       Breaking Logic into Components: 0
-  Jeffrey Wan:
-    repository: 
-    notes: 
+  Jeffrey Wan: 
+    repository: https://github.com/Jwan622/Mastermind
+    notes: final
     evaluation:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
