--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -117,7 +117,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Brandon Mrsny:
-    repository: 
+    repository: https://github.com/bmrsny/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
