--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -90,7 +90,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Orion Osborn:
-    repository: 
+    repository: https://github.com/oorion/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
