--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -180,7 +180,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Lydia Shafer:
-    repository: 
+    repository: https://github.com/Lydias303/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
