--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -107,7 +107,7 @@ submissions:
       Test-Driven Development: 0
       REPL Interface: 0
       Breaking Logic into Components: 0
-  Krista A Nelson:
+  Krista A Nelson:https://github.com/KristaANelson/mastermind
     repository: 
     notes: 
     evaluation:
