--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -98,7 +98,7 @@ submissions:
       Test-Driven Development: 0
       REPL Interface: 0
       Breaking Logic into Components: 0
-  Bhargavi Satpathy:
+  Bhargavi Satpathy: https://github.com/bhargavisatpathy/mastermind.git
     repository: 
     notes: 
     evaluation:
