--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -9,7 +9,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Laura Whalin:
-    repository: 
+    repository: https://github.com/laurawhalin/mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
