--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -36,7 +36,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Lori Culberson:
-    repository: 
+    repository: https://github.com/loriculberson/mastermindlc.git
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
