--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -54,7 +54,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Emily Berkeley:
-    repository: 
+    repository: https://github.com/EmilyMB/mastermind/
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
