--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -144,7 +144,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Chris Luhring:
-    repository: 
+    repository: https://github.com/cluhring/Mastermind
     notes: 
     evaluation:
       Fundamental Ruby & Style: 0
