--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -13,13 +13,16 @@ submissions:
       Breaking Logic into Components: 2.5
   Laura Whalin:
     repository: https://github.com/laurawhalin/mastermind
-    notes: 
+    notes: "Application shows good use and knowledge of Ruby.
+            Very impressive for a first project!
+            Code is easy to read.
+            Missing a few tests."
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 3.5
+      Enumerable & Collections: 3
+      Test-Driven Development: 2.5
+      REPL Interface: 4
+      Breaking Logic into Components: 3.5
   Jeffrey Wan: 
     repository: https://github.com/Jwan622/Mastermind
     notes: final
