--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -61,31 +61,31 @@ submissions:
       Breaking Logic into Components: 3.5
   Emily Berkeley:
     repository: https://github.com/EmilyMB/mastermind/
-    notes:
+    notes:"Good implementation; repl works well with some features; needs more TDD; a few more components could be extracted."
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 2
+      Test-Driven Development: 1
+      REPL Interface: 3.5
+      Breaking Logic into Components: 3
   Edward McCarthy:
-    repository:
-    notes:
+    repository: https://github.com/mcshakes/Mastermind
+    notes: "Solid implementation; repl works at basic level without any bells and whistles. Test coverage and usage is pretty good; game class has become a bit bloated and have more components extracted"
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 2.5
+      Enumerable & Collections: 3
+      Test-Driven Development: 3
+      REPL Interface: 3
+      Breaking Logic into Components: 2
   Michael Dao:
     repository: https://github.com/mikedao/mastermind
-    notes:
+    notes: "Solid implementation; code well factored with good components. Test coverage solid; next step would be exploring some more sophisticated integration testing techniques; repl easy to use and several sweet extensions."
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 3.5
+      Test-Driven Development: 3
+      REPL Interface: 3.5
+      Breaking Logic into Components: 3
   Kalah Cheek:
     repository: https://github.com/kcheek/mastermind2.git
     notes:
